# airmap-platform-sdk

./: .gitmodules  CMakeLists.txt  README.md  airmapd.cmake  azure-pipelines.yaml  pack.cmake
.circleci/: config.yml
cmake/: DetermineTargetArchitecture.cmake
debian/: airmapd-intel-aero.postinst
doc/: Doxyfile.in
docker/: alpine  android  centos  extract_artifacts.sh  l4t  rpi  ubuntu
docker/l4t/: l4t  l4t.base
examples/monitor/: CMakeLists.txt
examples/qt/: CMakeLists.txt  client.cpp  client.h
include/airmap/: advisory.h  authenticator.h  client.h  context.h  evaluation.h  flight_plan.h  flight_plans.h  flights.h  geometry.h  logger.h  pilots.h  rulesets.h  traffic.h  types.h
include/airmap/qt/: logger.h  scheduler.h  types.h
interfaces/grpc/: CMakeLists.txt
src/airmap/: CMakeLists.txt  client.cpp  context.cpp  evaluation.cpp  paths.cpp  paths.h  version.cpp.in
src/airmap/boost/: context.cpp  context.h
src/airmap/cmds/airmap/: CMakeLists.txt
src/airmap/codec/json/: pilot.h  (+4 more)
src/airmap/cpp/: CMakeLists.txt
src/airmap/grpc/: CMakeLists.txt
src/airmap/mavlink/: CMakeLists.txt  mission.cpp
src/airmap/monitor/: CMakeLists.txt  telemetry_submitter.cpp  telemetry_submitter.h
src/airmap/platform/: path.h
src/airmap/qt/: CMakeLists.txt
src/airmap/rest/: advisory.cpp  advisory.h  aircrafts.cpp  aircrafts.h  airspaces.cpp  airspaces.h  authenticator.cpp  authenticator.h  client.cpp  client.h  flight_plans.cpp  flight_plans.h  flights.cpp  flights.h  pilots.cpp  pilots.h  rulesets.cpp  rulesets.h  status.cpp  status.h  telemetry.cpp
src/airmap/util/: scenario_simulator.cpp  scenario_simulator.h  telemetry_simulator.cpp  telemetry_simulator.h
test/: CMakeLists.txt  airmapd.valid.config.json  client_test.cpp  platform_test.cpp
test/acceptance/: fixture.sh
tools/: build.cmake.sh
tools/alpine/: setup.dev.sh
tools/android/: download-ndk.sh
tools/centos/: build-docker-image.sh  setup.dev.sh
tools/l4t/: build-docker-image.sh  cleanup.dev.sh  setup-pr-build.sh  setup.dev.sh
tools/rpi/: setup.dev.sh
tools/ubuntu/: cleanup.dev.sh  setup.dev.sh  test-packaging.sh
(+52 files in other folders)
